<resources>
    <string name="app_name" translatable="false">Tash Cabs</string>
    <string name="rider">Rider</string>
    <string name="driver">Driver</string>
    <string name="get_started">Get started</string>
    <string name="title_activity_maps">Map</string>
    <string name="call_a_cab">Call a Cab</string>
    <string name="calling">Calling…</string>
    <string name="accept">Accept</string>
    <string name="away_from_you">%d.2f meters away from you</string>
    <string name="requesting_driver">Requesting a driver</string>

    <string name="log_in">Log in</string>
    <string name="create_account">Don\'t have an account? <b>Sign up</b>.</string>

    <string name="proceed">Proceed</string>
    <string name="how_to_register_you">How to register you?</string>
    <string name="choose_your_role">Choose your role</string>
    <string name="email">Email</string>
    <string name="proceed_as_driver">Proceed as driver</string>
    <string name="proceed_as_rider">Proceed as rider</string>

    <string name="full_name">Full name</string>
    <string name="sign_up">Sign up</string>
    <string name="sign_up_with_username_and_password">Sign up with username and password</string>
    <string name="verification">Verification…</string>
    <string name="password">Password</string>
    <string name="username">Username</string>

    <string name="password_repeat">Password repeat</string>
    <string name="allow_access_to_location_services">Allow access to location services</string>
    <string name="settings">Settings</string>
    <string name="account">Account</string>
    <string name="nearby_requests">Nearby requests</string>
    <string name="log_out">Log out</string>
    <string name="logo_image">Logo image</string>
    <string name="wifi_connected">Connected to Wi-Fi</string>
    <string name="lost_connection">Connection is lost</string>
    <string name="enable_gps_to_proceed">Enable GPS to proceed</string>
    <string name="check_your_network_connection">Check your network connection</string>
    <string name="passwords_not_same">Passwords are not the same</string>
    <string name="failed_to_determine_your_location">Failed to determine your location</string>
    <string name="order_history">Order history</string>
    <string name="my_addresses">My addresses</string>
    <string name="payment_method">Payment method</string>
    <string name="selected_location">Selected location</string>
    <string name="selected_location_error">Unable to determine location</string>
    <string name="selecting">Selecting…</string>
    <string name="where_are_you_going">Where are you going?</string>
    <string name="request_cab">Request cab</string>
    <string name="pull_this_to_open_bottom_sheet">Pull this to open bottom sheet</string>
    <string name="pick_up_location">Pick up location</string>
    <string name="drop_location">Drop location</string>
    <string name="just_placeholder">Just placeholder</string>
    <string name="your_cab_is_booked">Your cab is booked</string>
    <string name="your_cab_is_arriving">Your cab is arriving</string>
    <string name="your_cab_has_arrived">Your cab has arrived</string>
    <string name="your_are_on_trip">You are on trip</string>
    <string name="trip_ended">Trip ended</string>
    <string name="take_a_next_ride">Take a next ride?</string>
    <string name="route_not_available">Route Not Available: Choose different pickup and drop location</string>
    <string name="user_image">User\'s image</string>
    <string name="user">User</string>
    <string name="tel_number_placeholder">+99999 999–99–99</string>
    <string name="no_connection">No connection</string>
    <string name="pull_up_to_get_bottom_sheet">Pull up to get bottom sheet</string>
    <string name="no_gps">No gps</string>
    <string name="arrow_button">Arrow button</string>

</resources>
