<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data />

    <merge>

        <LinearLayout
            android:id="@+id/bottom_sheet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/transparent"
            android:orientation="vertical"
            app:behavior_hideable="false"
            app:behavior_peekHeight="126dp"
            app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

            <ImageView
                android:id="@+id/imageViewPullMe"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:contentDescription="@string/pull_this_to_open_bottom_sheet"
                android:src="@drawable/pull_me"
                android:visibility="visible" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white"
                android:elevation="@dimen/elevation"
                android:paddingBottom="@dimen/medium_space">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/pickUpIndicator"
                    android:layout_width="12dp"
                    android:layout_height="15dp"
                    android:layout_marginStart="16dp"
                    android:background="@drawable/ic_pin"
                    app:layout_constraintBottom_toBottomOf="@+id/pickUp_text"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/pickUp_text" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/direction_line"
                    android:layout_width="1dp"
                    android:layout_height="0dp"
                    android:background="@android:color/black"
                    app:layout_constraintBottom_toTopOf="@+id/dropIndicator"
                    app:layout_constraintEnd_toEndOf="@+id/pickUpIndicator"
                    app:layout_constraintStart_toStartOf="@+id/pickUpIndicator"
                    app:layout_constraintTop_toBottomOf="@+id/pickUpIndicator" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/dropIndicator"
                    android:layout_width="9dp"
                    android:layout_height="9dp"
                    android:background="@drawable/bg_circle_black"
                    app:layout_constraintBottom_toBottomOf="@+id/drop_text"
                    app:layout_constraintEnd_toEndOf="@id/direction_line"
                    app:layout_constraintStart_toStartOf="@id/direction_line"
                    app:layout_constraintTop_toTopOf="@+id/drop_text" />

                <TextView
                    android:id="@+id/pickUp_text"
                    style="@style/BottomSheetTextViewStyle"
                    android:hint="@string/pick_up_location"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/status_text" />

                <TextView
                    android:id="@+id/drop_text"
                    style="@style/BottomSheetTextViewStyle"
                    android:hint="@string/drop_location"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/pickUp_text" />

                <Button
                    android:id="@+id/request_btn"
                    style="@style/ButtonStyle"
                    android:layout_marginTop="@dimen/large_space"
                    android:layout_marginBottom="@dimen/medium_space"
                    android:text="@string/request_cab"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/drop_text" />

                <TextView
                    android:id="@+id/status_text"
                    style="@style/StatusTextView"
                    android:visibility="gone"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="Current ride status..." />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>
    </merge>
</layout>
